--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
-*.swp
-*.swo
-tmp*
-tags
+*.gem
+*.rbc
+.bundle
+.config
+.yardoc
+Gemfile.lock
+InstalledFiles
+_yardoc
+coverage
+doc/
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+pkg
+*.iml
+*.ipr
+*.iws
+.idea
